--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,10 +73,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: JS
+      fonts:
+        - asset: assets/fonts/Julietta Signature.ttf
+    - family: RobotoT
+      fonts:
+        - asset: assets/fonts/Roboto-Thin.ttf
+    - family: PR
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
